@@ -2,13 +2,14 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.43 [20160226] [svn: r680]
+Changelog for sg3_utils-1.43 [20160228] [svn: r681]
   - sg_senddiag: add --timeout=SEC option
   - sg_sanitize: add --timeout=SEC option
   - sg_format: add --timeout=SEC option
   - sg_reassign+sg_write_same: fix ULONG_MAX problem
   - sg_turs+sg_requests: make both accept '--num=NUM'
     and '--number=NUM' for mutual compatibility
+  - rescan-scsi-bus.sh: harden code
   - shellcheck cleanup on scripts
 
 Changelog for sg3_utils-1.42 [20160217] [svn: r663]
